--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   Hello world
   <script src="script.js"></script>
-  <h1>Welcome to SDEV</h1>
+  <h1>Welcome to SDEV255</h1>
   <script src="https://replit.com/public/js/replit-badge-v2.js" theme="dark" position="bottom-right"></script>
 </body>
 
