--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
 </head>
 
 <body>
-  Hello world
   <script src="script.js"></script>
-  <h1>Welcome to SDEV255</h1>
+  <h1>Welcome to Colby's Website</h1>
   <script src="https://replit.com/public/js/replit-badge-v2.js" theme="dark" position="bottom-right"></script>
 </body>
 
